# mllam-verification

./: .gitignore  README.md  example.yaml  pyproject.toml
mllam_verification/: __init__.py  __main__.py  argument_parser.py  config.py  plot.py  time_alignment.py  verify.py
mllam_verification/operations/: dataset_manipulation.py  loading.py  plot.py  saving.py  statistics.py
tests/: test_time_alignment.py
tests/unit/: conftest.py  test_plot.py  test_saving.py  test_statistics.py  test_verify.py
