[project]
name = "mllam-verification"
version = "0.1.0"
description = "Verification of neural-lam, e.g. performance of the model relative to the truth, persistence, etc."
authors = [
    {name = "Martin Frølund", email = "maf@dmi.dk"},
]
dependencies = [
    "xarray>=2024.2.0",
    "zarr>=2.17.0",
    "loguru>=0.7.2",
    "pydantic>=2.10.4",
    "matplotlib>=3.9.4",
    "netCDF4>=1.7.2",
    "click>=8.1.8",
    "scores>=2.0.0",
    "PyQt5>=5.15.11",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.isort]
profile = "black"

[tool.pdm]
distribution = true
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.2",
    "pre-commit>=3.7.1",
]
